Fixed issue of overlapping divs

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -182,6 +182,7 @@ ul {
 	padding: 30px;
 	justify-content: center;
 	top: -35px;
+	z-index: -1;
 }
 
 .Listing h2 {
