--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -25,6 +25,7 @@
 	background-repeat: no-repeat;
 	padding: 30px;
     margin-bottom: 20px;
+    z-index: -1;
 }
 
 #profilePage .Header h2 {
